TAG: qcreports_db-6-0-23-13
TAG: qcreports_db-6-0-23-12
DATE: 03/19/2024
STAFF: lec
wts2-1441/fl3-787/custom report listing HT Experiment Notes for experiments whose curation status = done

TAG: qcreports_db-6-0-23-11
TAG: qcreports_db-6-0-23-10
DATE: 03/14/2024
STAFF: lec
wts2-1439/fl2-784/HT/remove Raw Sample Count from PWI & QC
undo:
wts2-1430/fl2-778/add column to existing GXD_HTOverview

TAG: qcreports_db-6-0-23-9
DATE: 03/13/2024
STAFF: lec
wts2-1437/fl2-780/missing QC report 'New PubMed2Gene References for markers with no literature MP annot'
weird/looks ok on master/qcr.shtml

TAG: qcreports_db-6-0-23-8
DATE: 03/12/2024
STAFF: lec
wts2-1430/fl2-778/add column to existing GXD_HTOverview

TAG: qcreports_db-6-0-23-7
TAG: qcreports_db-6-0-23-6
DATE: 03/11/2024
STAFF: lec
wts2-1429/fl2-777/re-add weekly/BIB_Duplicates.sql

TAG: qcreports_db-6-0-23-5
TAG: qcreports_db-6-0-23-4
DATE: 03/1/2024
STAFF: lec
wts2-1419/fl2-761/Alicia Valenzuela QC, etc.
wts2-1421/obsolete QC reports
#       deleted:    mgd/PRB_Strain5.py
#       deleted:    mgd/PRB_Strain6.py
#       deleted:    mgd/PRB_StrainDup.sql
#       deleted:    mgd/PRB_StrainTrans.sql
#       deleted:    mgd/PRB_Strain_MultNoAlleles.sql
#       deleted:    mgd/PRB_Strain_NoAlleles1.sql
#       deleted:    mgd/PRB_Strain_NomenSyns.py
#       deleted:    mgd/PRB_Strain_OtherSyns.py
#       deleted:    mgd/PRB_Strain_SingleNoAlleles1.sql
#       deleted:    mgd/PRB_Strain_SingleNoAlleles2.sql
#       deleted:    mgd/PRB_Strain_Standard.sql
#       deleted:    weekly/BIB_Duplicates.sql
#       deleted:    weekly/GO_CurationMetrics.sql
#       deleted:    monthly/BIB_Dagger.sql

TAG: qcreports_db-6-0-23-3
DATE: 02/27/2024
STAFF: lec
wts2-1412/fl2-758/retire WF_GXD_secondary.rpt QC
#       deleted:    weekly/WF_GXD_secondary.py

TAG: qcreports_db-6-0-23-2
DATE: 02/01/2024
STAFF: lec
wts2-1382/fl2-717/add relevance
wts2-1381/fl2-721/New QC report: New PubMed2Gene References for markers with no literature MP annot.